# mtg-eff-sandbox

./: Cargo.toml
src/: effect_value.rs  interpreter.rs  lib.rs
