[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
typetag = "0.2.3"

[dev-dependencies]
insta = "1.17.1"
